# examen-mlops

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: Dockerfile  main.py  requirements.txt  schemas.py
docs/: GUIDE.md  SOUTENANCE.md  drift_report.json
infra/mlflow/: Dockerfile
models/: best_model.joblib  metadata.json
notebooks/: 01_eda.ipynb  02_business_score.ipynb  03_training.ipynb  04_drift.ipynb  _build_business_score.py  _build_drift.py  _build_eda.py  _build_training.py
scripts/: README.md  build_all_notebooks.py  build_business_score_notebook.py  build_drift_notebook.py  build_eda_notebook.py  build_training_notebook.py
src/mlops_scoring_exam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scoring/: __init__.py  business_score.py  data.py  drift.py  preprocessing.py  train.py
src/scoring_app/: __init__.py  api.py  config.py  data.py  drift.py  model_io.py  scoring.py  streamlit_app.py  train.py
streamlit_app/: Dockerfile  app.py  profiles.json  requirements.txt
tests/: conftest.py  test_api.py  test_business_score.py  test_data_model_drift.py  test_preprocessing.py  test_scoring.py
