[project]
name = "mlops-scoring-exam"
version = "0.1.0"
description = "Projet d'examen MLOps: scoring binaire, MLflow, API FastAPI, Streamlit et drift monitoring."
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "streamlit>=1.37.0",
  "requests>=2.32.0",
  "mlflow>=2.14.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=scoring_app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
  "src/scoring_app/streamlit_app.py",
  "src/scoring_app/train.py",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
